# markov-autoregression

./: .gitignore  LICENSE  README.md  eval_ar.sh  mars.yaml  memorize_ar.sh  memorize_ar_folding.sh  memorize_fm.sh  overfit_ar.sh  overfit_ar_ca.sh  overfit_fm.sh  pyproject.toml  train_ar.sh  train_ar_backbone.sh  train_ar_ca.sh  train_fm.sh  train_mf.sh  train_mf_backbone.sh  train_mf_ca.sh
markov_autoregression/: analysis.py  transport.py
markov_autoregression/data/: dataset.py  discretize.py  geometry.py
markov_autoregression/model/: autoregressive_model.py  model.py  module.py
markov_autoregression/neural_networks/: __init__.py  causal_transformer.py
mars/: analysis.py  utils.py
mars/data/: dataset.py  geometry.py
mars/model/: model.py  module.py
notebooks/: compare_to_paper.ipynb
scripts/: analyze.sh  eval.sh  eval_ar.sh  eval_ar_e124.sh  generate.py  msm_clusters_mdcath.sh  patch_ckpt_args.py  process.sh  process_computecan.sh  train.py  train_mdcath.sh  training_args.py
scripts/analysis/: analyze_4AA.py  analyze_mdcath.py
scripts/msm_clusters/: create_msm_states_4AA.py  create_msm_states_mdcath.py  create_msm_states_mdcath_xtc.py
scripts/prepare_data/: convert_hdf_to_xtc.py  convert_hdf_to_xtc.sh  import_h5py.py  prep_sims_4AA.py  prep_sims_mdcath.py  prep_sims_mdcath_xtc.py
splits/: mdCATH.txt  mdCATH_test.csv  mdCATH_train.csv  mdCATH_val.csv
splits/_overfit/: single_12asA00.csv
