[project]
name = "mars"
version = "0.1.0"
requires-python = "==3.12.13"
dependencies = [
    "GitPython==3.1.46",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.3",
    "PyYAML==6.0.3",
    "Pygments==2.20.0",
    "absl-py==2.4.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "attrs==26.1.0",
    "bioemu_benchmarks==0.0.1",
    "biopython==1.87",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "click==8.3.2",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "deeptime==0.4.5",
    "dm-tree==0.1.10",
    "fair-esm==2.0.0",
    "filelock==3.28.0",
    "fire==0.7.1",
    "fonttools==4.62.1",
    "frozenlist==1.8.0",
    "fsspec==2026.3.0",
    "gitdb==4.0.12",
    "h11==0.16.0",
    "h5py==3.16.0",
    "hf-xet==1.4.3",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface_hub==1.11.0",
    "idna==3.11",
    "joblib==1.5.3",
    "kiwisolver==1.5.0",
    "lightning-utilities==0.15.3",
    "markdown-it-py==4.0.0",
    "matplotlib==3.10.8",
    "mdtraj==1.11.0",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "networkx==3.6.1",
    "numpy==1.26.4",
    "nvidia-cublas-cu12==12.6.4.1",
    "nvidia-cuda-cupti-cu12==12.6.80",
    "nvidia-cuda-nvrtc-cu12==12.6.85",
    "nvidia-cuda-runtime-cu12==12.6.77",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.0.4",
    "nvidia-cufile-cu12==1.11.1.6",
    "nvidia-curand-cu12==10.3.7.77",
    "nvidia-cusolver-cu12==11.7.1.2",
    "nvidia-cusparse-cu12==12.5.4.2",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.28.9",
    "nvidia-nvjitlink-cu12==12.6.85",
    "nvidia-nvtx-cu12==12.6.77",
    "optree==0.19.0",
    "packaging==26.0",
    "pandas==3.0.2",
    "patsy==1.0.2",
    "pillow==12.2.0",
    "platformdirs==4.9.6",
    "propcache==0.4.1",
    "protobuf==7.34.1",
    "pydantic==2.13.1",
    "pydantic_core==2.46.1",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pytorch-lightning==2.6.1",
    "regex==2026.4.4",
    "requests==2.33.1",
    "rich==15.0.0",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "sentry-sdk==2.58.0",
    "setuptools==81.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.3",
    "statsmodels==0.14.6",
    "sympy==1.14.0",
    "termcolor==3.3.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torch==2.11.0+cu126",
    "torchdiffeq==0.2.5",
    "torchmetrics==1.9.0",
    "torchvision==0.26.0+cu126",
    "tqdm==4.67.3",
    "transformers==5.5.4",
    "triton==3.6.0",
    "typer==0.24.1",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "urllib3==2.6.3",
    "wandb==0.26.0",
    "wrapt==2.1.2",
    "yarl==1.23.0",
]
 
[tool.uv]
# PyTorch CUDA wheels are hosted on PyTorch's own index
index-strategy = "unsafe-best-match"
 
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
 
[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
triton = { index = "pytorch-cu126" }

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"